--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,13 +1,20 @@
 # DATASOURCE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3307/order?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=adm@1234
 # H2 CLIENT
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 # JPA, SQL
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.security.user.name=christopher
+spring.security.user.password=test123
+
+logging.level.org.springframework.security=DEBUG
